--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <nav
-  class="tw-w-full tw-bg-blue-600 tw-text-center tw-text-white md:tw-flex md:tw-items-center md:tw-justify-between md:tw-px-2"
+  class=" tw-bg-blue-600 tw-text-center tw-text-white md:tw-flex md:tw-items-center md:tw-justify-between md:tw-px-2"
 >
   <div class="tw-flex tw-items-center tw-justify-center">
     <img src="../../../assets/image/shivalogo.png" />
   </div>
   <ul
-    class="tw-m-0 tw-block tw-cursor-pointer tw-list-none tw-p-0 tw-text-lg md:tw-flex md:tw-gap-14"
+    class="tw-m-0  tw-cursor-pointer tw-list-none tw-p-0 tw-text-lg md:tw-flex md:tw-gap-14"
   >
     <li class="">Home</li>
     <li class="">Service</li>
@@ -14,7 +14,7 @@
   </ul>
 
   <ul
-    class="tw-list-none tw-p-0 tw-mx-1 tw-flex tw-justify-between tw-bg-slate-700 md:tw-flex md:tw-flex-col md:tw-bg-transparent md:tw-mt-3 md:tw-items-start tw-h-full"
+    class="tw-list-none tw-p-0 tw-mx-1 tw-flex tw-justify-between tw-bg-slate-700 md:tw-flex md:tw-flex-col md:tw-bg-transparent md:tw-flex-wrap md:tw-mt-3 md:tw-items-start tw-h-full tw-flex-wrap"
   >
   <div class="tw-flex tw-gap-1 tw-items-center"><ng-icon name="ionCallOutline"></ng-icon> 9051156001/7278608213</div>
   <div class="tw-flex tw-gap-1 tw-items-center"><ng-icon name="ionMailOutline"></ng-icon> shivapackerandmovers@gamil.com</div>
