--- a/src/app/pages/common/list-image-info/list-image-info.component.html
+++ b/src/app/pages/common/list-image-info/list-image-info.component.html
@@ -1,15 +1,25 @@
-<div class="tw-container tw-mx-auto">
-    <div>
-        <h6>Why Choose Shiva Packer and Mover?</h6>
-    </div>
-    <div>
-        <ul *ngFor="let item of list; let i = index" class="tw-list-none tw-p-0" >
-            <li>
-                <p class="tw-font-semibold">{{item.title}}</p> <p>{{item.content}}</p>
-            </li>
-        </ul>
-        <div>
-            <img src="" alt="">
+<div class="tw-bg-yellow-200 tw-py-2">
+    <div class="tw-container  tw-mx-auto md:tw-flex md:tw-justify-between ">
+        <div class="tw-px-2  md:tw-px-0 ">
+         <div>
+             <h6>Why Choose Shiva Packer and Mover?</h6>
+         </div>
+         <div>
+             <ul *ngFor="let item of list; let i = index" class="tw-list-none tw-p-0" >
+                 <li fl>
+                     <p class="tw-font-semibold">{{item.title}}<span class="tw-font-normal">{{item.content}}</span></p> 
+                 </li>
+             </ul>
+         </div>
         </div>
-    </div>
+        <div class="tw-grid tw-place-content-center tw-w-full">
+          
+        <div class="tw-grid tw-grid-cols-2 tw-grid-flow-row tw-gap-2">
+            <div class="tw-w-40 tw-h-40  tw-bg-feature-1 tw-bg-cover"></div>
+            <div class="tw-w-40 tw-h-40  tw-bg-feature-1 tw-bg-cover"></div>
+            <div class="tw-w-40 tw-h-40  tw-bg-feature-1 tw-bg-cover"></div>
+            <div class="tw-w-40 tw-h-40  tw-bg-feature-1 tw-bg-cover"></div>
+           </div>
+        </div>
+        </div>
 </div>
