--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,9 @@ nav,footer{
     background: radial-gradient(50% 50.00% at 50% 50.00%, #3379BF 0%, #036 100%);
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
+*,html{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
