left info box done

--- a/src/app/pages/common/list-image-info/list-image-info.component.html
+++ b/src/app/pages/common/list-image-info/list-image-info.component.html
@@ -1,4 +1,4 @@
-<div class="tw-bg-yellow-200 tw-py-2">
+<div class="tw-bg-yellow-200 tw-py-2 m-b">
     <div class="tw-container  tw-mx-auto md:tw-flex md:tw-justify-between ">
         <div class="tw-px-2  md:tw-px-0 ">
          <div>
