--- a/src/app/pages/common/banner-box/banner-box.component.html
+++ b/src/app/pages/common/banner-box/banner-box.component.html
@@ -1,1 +1,29 @@
-<p>banner-box works!</p>
+<div class="tw-grid tw-grid-cols-2 tw-grid-flow-row tw-gap-1 md:grid md:tw-grid-cols-4  tw-bg-gray-300">
+  <app-banner-item
+    iconImg="tw-bg-icon-requirement"
+    title="Submit Your Requirement"
+    step="Step 1"
+    content="Provide the details of the goods and the probable time of shifting those goods the probable time of shifting those goods of Packer and Mover."
+  ></app-banner-item>
+
+  <app-banner-item
+    iconImg="tw-bg-icon-quote"
+    title="Get Quote From Us"
+    step="Step 2"
+    content="Get satisfying quotation according to your loading capacity and shifting range."
+  ></app-banner-item>
+
+  <app-banner-item
+    iconImg="tw-bg-icon-compare"
+    title="Compare, Bargaining  And Hire"
+    step="Step 3"
+    content="Compare shifting Quotes, and hire on the best rate that suits your budget."
+  ></app-banner-item>
+
+  <app-banner-item
+    iconImg="tw-bg-icon-packing"
+    title="We Got You Moved"
+    step="Step 4"
+    content="Confirm your date on time of booking and schedule your move."
+  ></app-banner-item>
+</div>
