--- a/src/app/pages/common/home-page/home-page.component.html
+++ b/src/app/pages/common/home-page/home-page.component.html
@@ -1,3 +1,4 @@
 <app-welcome-box></app-welcome-box>
 <app-list-image-info></app-list-image-info>
+<app-banner-box></app-banner-box>
 <app-left-image-info></app-left-image-info>
