home page almost done

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="tw-flex tw-flex-col md:flex md:tw-flex-row tw-justify-between tw-p-3 tw-text-white">
+  <div class="tw-flex tw-flex-col md:flex md:tw-flex-row tw-justify-between tw-p-3 tw-pt-10 tw-text-white">
     <div
       class="tw-flex tw-flex-col tw-justify-start md:tw-flex md:tw-flex-row md:tw-w-3/4 md:tw-justify-between md:tw-px-2"
     >
