--- a/src/app/pages/common/welcome-box/welcome-box.component.html
+++ b/src/app/pages/common/welcome-box/welcome-box.component.html
@@ -1,4 +1,4 @@
-<div class="tw-container tw-mx-auto tw-text-center tw-mb-10">
-    <h2>{{title}}</h2>
+<div class="tw-container tw-mx-auto tw-text-center tw-my-10">
+    <h2 class="{{fontSize}}">{{title}}</h2>
     <p>{{content}}</p>
 </div>
