--- a/src/app/pages/common/home-page/home-page.component.html
+++ b/src/app/pages/common/home-page/home-page.component.html
@@ -1,4 +1,10 @@
+<app-hero-section></app-hero-section>
 <app-welcome-box></app-welcome-box>
-<app-list-image-info></app-list-image-info>
+<app-right-image-info-list></app-right-image-info-list>
 <app-banner-box></app-banner-box>
-<app-left-image-info></app-left-image-info>
+<app-left-form-info-list></app-left-form-info-list>
+<app-banner-expertise></app-banner-expertise>
+<app-welcome-box
+  title="Get Started Today!!!"
+  content="Planning a move? Let Shiva Packer and Mover be your trusted partner. Contact us today for a free quote or to schedule a consultation. Experience a smooth and hassle-free moving experience with the experts you can trust."
+></app-welcome-box>
