--- a/src/app/pages/common/navbar/navbar.component.html
+++ b/src/app/pages/common/navbar/navbar.component.html
@@ -7,10 +7,10 @@
   <ul
     class="tw-m-0  tw-cursor-pointer tw-list-none tw-p-0 tw-text-lg md:tw-flex md:tw-gap-14"
   >
-    <li class="">Home</li>
-    <li class="">Service</li>
-    <li class="">Contact</li>
-    <li class="">About</li>
+    <li class=""><a  href="/home">Home</a></li>
+    <li class=""><a  href="/service">Service</a></li>
+    <li class=""><a  href="/contact">Contact</a></li>
+    <li class=""><a  href="/about">About</a></li>
   </ul>
 
   <div
