--- a/src/app/pages/common/right-image-info-list/right-image-info-list.component.html
+++ b/src/app/pages/common/right-image-info-list/right-image-info-list.component.html
@@ -1,8 +1,8 @@
-<div class="tw-bg-yellow-200 tw-py-2 m-b">
+<div class="{{extraClass}} tw-py-2 m-b">
     <div class="tw-container  tw-mx-auto md:tw-flex md:tw-justify-between ">
         <div class="tw-px-2  md:tw-px-0 ">
          <div>
-             <h5>Why Choose Shiva Packer and Mover?</h5>
+             <h5>{{title}}</h5>
          </div>
          <div>
              <ul *ngFor="let item of list; let i = index" class="tw-list-none tw-p-0" >
