--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,8 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     // box-sizing: border-box;
     overflow-x: auto;
 }
+
+a {
+    text-decoration: none !important;
+    color: inherit !important;
+  }
