contact done about done service in progress

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -14,8 +14,6 @@
   [list]="secondList"
 ></app-left-image-info-list>
 
-<!-- Need to change -->
-
 <app-right-image-info-list
   title="Our Story:"
   [list]="thirdList"
@@ -34,3 +32,6 @@ title="Our Team"
 title="Contact Us"
   content="Contact Us: We are here to help you with your moving needs. Reach out to us via phone, email, or the contact form on our website. Let's start planning your move today!"
 ></app-welcome-box>
+
+
+<app-contact-form></app-contact-form>
