--- a/src/app/pages/common/footer/footer.component.html
+++ b/src/app/pages/common/footer/footer.component.html
@@ -25,7 +25,7 @@
       <button
         class="tw-rounded-md tw-bg-[#B5A9FF] tw-p-1 tw-text-lg tw-font-bold"
       >
-        Contact Us
+        <a href="/contact">Contact Us</a>
       </button>
     </div>
   </div>
