--- a/src/app/pages/common/hero-section/hero-section.component.html
+++ b/src/app/pages/common/hero-section/hero-section.component.html
@@ -1,4 +1,4 @@
-<ngb-carousel class="tw-w-full tw-bg-yellow-300" *ngIf="images">
+<ngb-carousel class="tw-w-full tw-bg-blue-200" *ngIf="images">
 	<ng-template ngbSlide>
 		<div class="picsum-img-wrapper">
 			<img class="tw-w-full tw-h-[60vh]" [src]="images[0]" alt="Random first slide" />
