--- a/src/app/pages/service-page/service-page.component.html
+++ b/src/app/pages/service-page/service-page.component.html
@@ -1,13 +1,14 @@
 <app-hero-section></app-hero-section>
 <app-welcome-box title="Our Services" content="At Shiva Packer and Mover, we offer a comprehensive range of moving services to meet all your relocation needs. Whether you are moving your home or office, locally or across the country, our dedicated team is here to ensure a smooth and stress-free moving experience."></app-welcome-box>
 
-<div class="tw-container tw-mx-auto tw-bg-orange-400 tw-grid tw-place-content-center ">
-    <div class="tw-grid tw-grid-cols-4 tw-gap-4">
+<!-- <div class="tw-container tw-mx-auto tw-bg-orange-400 tw-grid tw-place-content-center ">
+    <div class="row row-cols-1 row-cols-md-3 g-4" *ngFor="let item of list; let i = index" >
+       <div class="col">
         <div class="card h-100">
-            <img src="https://images.unsplash.com/photo-1534534573898-db5148bc8b0c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=435&q=80" class="card-img-top tw-w-full" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <div class="tw-w-full tw-h-40  {{item.imgClass}} tw-bg-cover"></div>
+          <div class="card-body">
+              <h5 class="card-title">{{item.title}}</h5>
+              <p class="card-text">{{item.content}}</p>
             </div>
             <div class="card-footer">
               <small class="text-body-secondary">
@@ -15,77 +16,24 @@
               </small>
             </div>
         </div>
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">
-                <a href="contact">click to contact us</a>
-              </small>
-            </div>
-        </div>
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">
-                <a href="contact">click to contact us</a>
-              </small>
-            </div>
-        </div>
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">
-                <a href="contact">click to contact us</a>
-              </small>
-            </div>
-        </div>
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">
-                <a href="contact">click to contact us</a>
-              </small>
-            </div>
-        </div>
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">
-                <a href="contact">click to contact us</a>
-              </small>
-            </div>
-        </div>
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">
-                <a href="contact">click to contact us</a>
-              </small>
-            </div>
-        </div>
+       </div>
+       
     </div>
+</div> -->
+
+
+<div class="tw-container tw-mx-auto tw-bg-orange-400 tw-grid tw-place-content-center tw-p-8 ">
+
+<div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col" *ngFor="let item of list; let i = index">
+    <div class="card h-100">
+      <div class="tw-w-full tw-h-40 {{item.imgClass}} tw-bg-cover"></div>
+      <div class="card-body">
+        <h5 class="card-title">{{item.title}}</h5>
+        <p class="card-text">{{item.content}}</p>
+      </div>
+    </div>
+ 
+</div>
+
 </div>
