--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     // margin: 0;
     // padding: 0;
     // box-sizing: border-box;
-    overflow-x: auto;
+    overflow-x: hidden;
 }
 
 a {
