all page done, gallary page need to be added

--- a/src/app/pages/common/footer/footer.component.html
+++ b/src/app/pages/common/footer/footer.component.html
@@ -8,11 +8,11 @@
         <div class="tw-text-lg">Barrackpore, Kolkata-120</div>
       </div>
 
-      <div class="">
-        <div class="tw-flex tw-items-center tw-gap-1">
+      <div class="tw-font-medium">
+        <div class="tw-flex tw-items-center tw-gap-1 ">
           <ng-icon name="ionCallOutline"></ng-icon> 9051156001
         </div>
-        <div class="tw-flex tw-items-center tw-gap-1">
+        <div class="tw-flex tw-items-center tw-gap-1 ">
           <ng-icon name="ionCallOutline"></ng-icon> 7278608213
         </div>
         <div class="tw-flex tw-items-center tw-gap-1">
