--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -8,3 +8,5 @@
   title="Get Started Today!!!"
   content="Planning a move? Let Shiva Packer and Mover be your trusted partner. Contact us today for a free quote or to schedule a consultation. Experience a smooth and hassle-free moving experience with the experts you can trust."
 ></app-welcome-box>
+
+<app-quick-call-to-action></app-quick-call-to-action>
