--- a/src/app/pages/service-page/service-page.component.html
+++ b/src/app/pages/service-page/service-page.component.html
@@ -22,7 +22,7 @@
 </div> -->
 
 
-<div class="tw-container tw-mx-auto tw-bg-orange-400 tw-grid tw-place-content-center tw-p-8 ">
+<div class="tw-container tw-mx-auto tw-bg-blue-200 tw-grid tw-place-content-center tw-p-8  tw-m-10">
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col" *ngFor="let item of list; let i = index">
