whatsaap added to all the pages

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -4,7 +4,7 @@
   content="Welcome to Shiva Packer and Mover - Your Trusted Moving Partner"
 />
 <app-right-image-info-list
-  title="Our Story:"
+  title="Our Story"
   [list]="firstList"
   extraClass="tw-bg-yellow-200"
 />
@@ -15,7 +15,7 @@
 ></app-left-image-info-list>
 
 <app-right-image-info-list
-  title="Our Story:"
+  title="Our Value"
   [list]="thirdList"
   extraClass="tw-bg-yellow-200"
 />
@@ -35,3 +35,5 @@ title="Contact Us"
 
 
 <app-contact-form></app-contact-form>
+
+<app-quick-call-to-action/>
