--- a/src/app/pages/common/contact-form/contact-form.component.html
+++ b/src/app/pages/common/contact-form/contact-form.component.html
@@ -67,18 +67,16 @@
       <div class="tw-my-2 tw-font-medium">
         Barrackpore near new court,<br />pin-7000120
       </div>
-      <div class="tw-my-2 tw-font-medium">call us: 9051156001/7278608213</div>
+      <div class="tw-my-2 tw-font-medium">call us: <br/>9051156001<br/>7278608213</div>
     </div>
     <div>
       <div class="tw-text-xl tw-font-medium tw-text-[#008080]">
         Follow Us
       </div>
-      <div class="tw-my-2 tw-font-medium">
-        <div class="tw-flex tw-gap-4 tw-p-1">
+      <div class="tw-my-2 tw-font-medium tw-flex tw-flex-col md:flex md:tw-flex-row tw-gap-1">
             <ng-icon size="1.5rem" name="ionLogoFacebook"></ng-icon>
             <ng-icon size="1.5rem" name="ionLogoInstagram"></ng-icon>
             <ng-icon size="1.5rem" name="ionLogoYoutube"></ng-icon>
-          </div>
       </div>
     </div>
   </div>
