--- a/src/app/pages/service-page/service-page.component.html
+++ b/src/app/pages/service-page/service-page.component.html
@@ -1,26 +1,6 @@
 <app-hero-section></app-hero-section>
 <app-welcome-box title="Our Services" content="At Shiva Packer and Mover, we offer a comprehensive range of moving services to meet all your relocation needs. Whether you are moving your home or office, locally or across the country, our dedicated team is here to ensure a smooth and stress-free moving experience."></app-welcome-box>
 
-<!-- <div class="tw-container tw-mx-auto tw-bg-orange-400 tw-grid tw-place-content-center ">
-    <div class="row row-cols-1 row-cols-md-3 g-4" *ngFor="let item of list; let i = index" >
-       <div class="col">
-        <div class="card h-100">
-          <div class="tw-w-full tw-h-40  {{item.imgClass}} tw-bg-cover"></div>
-          <div class="card-body">
-              <h5 class="card-title">{{item.title}}</h5>
-              <p class="card-text">{{item.content}}</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">
-                <a href="contact">click to contact us</a>
-              </small>
-            </div>
-        </div>
-       </div>
-       
-    </div>
-</div> -->
-
 
 <div class="tw-container tw-mx-auto tw-bg-blue-200 tw-grid tw-place-content-center tw-p-8  tw-m-10">
 
@@ -37,3 +17,5 @@
 </div>
 
 </div>
+
+<app-quick-call-to-action/>
