--- a/src/app/pages/common/contact-form/contact-form.component.html
+++ b/src/app/pages/common/contact-form/contact-form.component.html
@@ -1,58 +1,90 @@
 <div class="custom-gradient  tw-m-8 tw-p-6 md:tw-px-16 tw-rounded-md tw-text-white md:tw-grid md:tw-grid-cols-4">
   <div class=" md:tw-col-span-3 ">
-    <form class=" md:tw-pr-36   tw-items-center tw-text-white">
+    <form [formGroup]="contact" (ngSubmit)="onSubmit()" class=" md:tw-pr-36   tw-items-center tw-text-white">
       <h5 class="tw-text-[#008080]">Just say hello !</h5>
       <h5 class="tw-text-sm">let us know your requirment</h5>
 
       <div class="tw-grid tw-grid-cols-1">
         <div class="mb-3">
-          <!-- <label for="name" class="form-label">Full Name</label> -->
+          <label for="name" class="form-label">Full Name</label>
           <input
             type="text"
             class="form-control tw-bg-[#B5A9FF] tw-text-white placeholder:tw-text-white"
             id="name"
             aria-describedby="name"
-            placeholder="Full Name"
+            placeholder="Enter full name here "
+            formControlName="name"
           />
-          <!-- <div id="emailHelp" class="form-text tw-text-red-500 ">We'll never share your email with anyone else.</div> -->
-        </div>
+          <div *ngIf="name?.invalid && (name?.dirty || name?.touched)">
+            <div *ngIf="name?.errors?.['required']" id="emailHelp" class="form-text tw-text-red-500 ">Full name required</div>
+        </div>        </div>
         <div class="mb-3">
-          <!-- <label for="name" class="form-label">Full Name</label> -->
+          <label for="name" class="form-label">Location</label>
           <input
             type="text"
             class="form-control tw-bg-[#B5A9FF] tw-text-white placeholder:tw-text-white"
             id="location"
             aria-describedby="location"
-            placeholder="Location"
+            placeholder="Enter your city/state"
+            formControlName="location"
+
           />
-          <!-- <div id="emailHelp" class="form-text tw-text-red-500 ">We'll never share your email with anyone else.</div> -->
+          <div *ngIf="location?.invalid && (location?.dirty || location?.touched)">
+            <div
+              *ngIf="location?.errors?.['required']"
+              id="emailHelp"
+              class="form-text tw-text-red-500"
+            >
+              Location required
+            </div>
+          </div>
         </div>
 
         <div class="mb-3">
-          <!-- <label for="Phone" class="form-label">Phone No.</label> -->
+          <label for="Phone" class="form-label">Phone No.</label>
           <input
             type="tel"
             class="form-control tw-bg-[#B5A9FF] tw-text-white placeholder:tw-text-white"
             id="phone"
             placeholder="Phone no."
+            formControlName="phone"
+
           />
+          <div *ngIf="phone?.invalid && (phone?.dirty || phone?.touched)">
+              <div *ngIf="phone?.errors?.['required']" id="emailHelp" class="form-text tw-text-red-500 ">Phone Required</div>
+              <div *ngIf="phone?.errors?.['indianPhoneNumber']" id="emailHelp" class="form-text tw-text-red-500 ">wrong no.</div>
+          </div>
+          
         </div>
       </div>
 
       <div class="mb-3">
-        <!-- <label for="msg" class="form-label">Message</label> -->
+        <label for="msg" class="form-label">Message</label>
         <textarea
           type="text"
-          class="form-control tw-bg-[#B5A9FF] tw-text-black placeholder:tw-text-white"
+          class="form-control tw-bg-[#B5A9FF] tw-text-white placeholder:tw-text-white"
           id="msg"
-          placeholder="Message"
+          placeholder="Enter"
           rows="3"
+          formControlName="msg"
+
         ></textarea>
-        <!-- <div id="emailHelp" class="form-text tw-text-red-500 ">We'll never share your email with anyone else.</div> -->
+        <div *ngIf="msg?.invalid && (msg?.dirty || msg?.touched)">
+          <div
+            *ngIf="msg?.errors?.['required']"
+            id="emailHelp"
+            class="form-text tw-text-red-500"
+          >
+            Message required
+          </div>
+        </div>
+        <div class="tw-text-2xl ">{{contact.value|json}}</div>
+
       </div>
       <div class="tw-flex tw-justify-center">
 
-      <button type="submit" class="btn tw-bg-[#008080] tw-text-white">
+
+      <button type="submit" [disabled]="!contact.valid" class="btn tw-bg-[#008080] tw-text-white">
         Submit
       </button>
 
